--- a/portfolio.html
+++ b/portfolio.html
@@ -15,44 +15,53 @@
     <link rel="stylesheet" href="./css/portfolio.min.css" />
   </head>
   <body>
-    <!--HEADER
+    <!--HEADER-->
 
-    <header class="header">
-      <div class="container">
-        <nav class="navigation">
-          <a class="logo link" href="./index.html"><span class="logo-caption">Web</span>Studio</a>
-    
+  <header class="header">
+    <div class="container">
+      <nav class="navigation">
+        <a class="logo link" href="./index.html"><span class="logo-caption">Web</span>Studio</a>
+        <button type="button" class="menu-button" data-menu-button>
+          <svg width="40" height="40">
+            <use class="icon-cross" href="./images/sprite.svg#cross"></use>
+            <use class="icon-menu" href="./images/sprite.svg#menu"></use>
+          </svg>
+        </button>
+        <div class="menu-container" id="menu-container" data-menu>
+  
           <ul class="navigation-list list">
             <li class="navigation-list-item">
               <a class="navigation-list-link link" href="./index.html">Студия</a>
             </li>
-            <li class="navigation-list-item ">
-              <a class="navigation-list-link link portfolio" href="./portfolio.html">Портфолио</a>
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link line" href="portfolio.html">Портфолио</a>
             </li>
             <li class="navigation-list-item">
               <a class="navigation-list-link link" href="">Контакты</a>
             </li>
           </ul>
-        </nav>
-    
-        <ul class="address-list list">
-          <li class="address-list-item">
-            <a href="mailto:info@devstudio.com" class="header-address-link link"><svg class="header-envelope-icon">
-                <use href="./images/sprite.svg#envelope"></use>
-              </svg>
-              info@devstudio.com</a>
-          </li>
-          <li class="address-list-item">
-            <a href="tel:+380961111111" class="header-address-link">
-              <svg class="header-smartphone-icon">
-                <use href="./images/sprite.svg#smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a>
-          </li>
-        </ul>
-      </div>
-    </header>
--->
+  
+  
+          <ul class="address-list list">
+            <li class="address-list-item">
+              <a href="mailto:info@devstudio.com" class="header-address-link link"><svg class="header-envelope-icon">
+                  <use href="./images/sprite.svg#envelope"></use>
+                </svg>
+                info@devstudio.com</a>
+            </li>
+            <li class="address-list-item">
+              <a href="tel:+380961111111" class="header-address-link link">
+                <svg class="header-smartphone-icon">
+                  <use href="./images/sprite.svg#smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+
     <!--MAIN-->
 
     <main class="section">
@@ -435,5 +444,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
